AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = xlog xlog_client
xlog_SOURCES = xlog.c  proc_title.c parse_conf.c xlog.h
xlog_client_SOURCES =  xlog_client.c  xlog.h
#CFLAGS =  -L /usr/local/mysql/lib/mysql/ -I /usr/local/mysql/include/mysql/   -lmysqlclient  `pkg-config --cflags --libs glib-2.0`
#CFLAGS =  `pkg-config --cflags --libs glib-2.0`

